<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">Discovery Place</string>
    <string name="description_logo">Place</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Missions</string>
    <string name="description_feature2">Free Roam</string>
    <string name="description_feature3">Must See</string>
    <string name="description_feature4">Museum Theme</string>
    <string name="description_feature5">Help</string>
    <string name="description_feature6">Exit</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Missions</string>
    <string name="title_feature2">Free Roam</string>
    <string name="title_feature3">Must See</string>
    <string name="title_feature4">Museum Theme</string>
    <string name="title_feature5">Help</string>
    <string name="title_feature6">Exit</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="freeRoam_intro">Feel free to roam the museum. Scan any QR code you see near an exhibit to get more information about it.</string>
    <string name="feature3_intro">Must See content goes here.</string>
    <string name="feature4_intro">Museum Theme content goes here.</string>
    <string name="feature5_intro">Help content goes here.</string>
    <string name="feature6_intro">Exits APP</string>
    <string name="about_intro">This app is a demo to show you an android app which can be used for Discovery pace Museum as a fun way to learn the exhibits by simply scanning QR codes.  .</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_quiz2">Quiz2Activity</string>
    <string name="title_activity_quiz3">Quiz3Activity</string>
    <string name="title_activity_quiz_result">QuizResultActivity</string>
    <string name="title_activity_mission">MissionActivity</string>
    <string name="title_activity_scan_qr">ScanQRActivity</string>
    <string name="title_activity_scanned_options">ScannedOptions</string>
    <string name="button_scan_qr">Scan QR Code</string>
    <string name="parameter_qrScreenDisplay">qrScreenDisplay</string>
    <string name="parameter_exhibitName">exhibitName</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="parameter_missionActivityFlag">flag</string>
    <string name="parameter_next">next</string>
    <string name="parameter_list">list</string>
    <string name="parameter_qrScreenCurrentExhibit">currentExhibit</string>
    <string name="parameter_mode">mode</string>
    <string name="mode_mission">mission</string>
    <string name="mode_freeRoam">freeRoam</string>
    <string name="mode_mustSee">mustSee</string>
    <string name="mode_themeOfTheMonth">themeOfTheMonth</string>
    <string name="option_text">text</string>
    <string name="option_text_display">Show More Information</string>
    <string name="option_video">video</string>
    <string name="option_video_display">Play Video</string>
    <string name="option_quiz">quiz</string>
    <string name="option_quiz_display">Take Quiz</string>
    <string name="option_game">game</string>
    <string name="option_game_display">Play Game</string>
    <string name="title_activity_mission_complete">MissionCompleteActivity</string>
	<string name="button_mission_complete">Back to Home</string>
	<string name="description_mission_complete">Congratulations! You have successfully completed the mission.</string>
</resources>