<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:visibility="visible" >

            <LinearLayout style="@style/TitleBar" >

                <ImageButton
                    style="@style/TitleBarAction"
                    android:contentDescription="@string/description_home"
                    android:onClick="onClickHome"
                    android:src="@drawable/title_home" />

                <ImageView style="@style/TitleBarSeparator" />

                <TextView style="@style/TitleBarText" />

                <ImageButton
                    style="@style/TitleBarAction"
                    android:contentDescription="@string/description_about"
                    android:onClick="onClickAbout"
                    android:src="@drawable/title_about" />

                <ImageButton
                    style="@style/TitleBarAction"
                    android:contentDescription="@string/description_search"
                    android:onClick="onClickSearch"
                    android:src="@drawable/title_search" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/QrScreenDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                 >
            </TextView>

            <Button
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickScanCode"
                android:padding="10dip"
                android:text="@string/button_scan_qr"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:context=".ScanQRActivity"
                android:layout_marginTop="40dip"
                
                 />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>