<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:visibility="visible" >

            <LinearLayout style="@style/TitleBar" >

                <ImageButton
                    style="@style/TitleBarAction"
                    android:contentDescription="@string/description_home"
                    android:onClick="onClickHome"
                    android:src="@drawable/title_home" />

                <ImageView style="@style/TitleBarSeparator" />

                <TextView style="@style/TitleBarText" />

                <ImageButton
                    style="@style/TitleBarAction"
                    android:contentDescription="@string/description_about"
                    android:onClick="onClickAbout"
                    android:src="@drawable/title_about" />

                <ImageButton
                    style="@style/TitleBarAction"
                    android:contentDescription="@string/description_search"
                    android:onClick="onClickSearch"
                    android:src="@drawable/title_search" />
            </LinearLayout>

         </FrameLayout>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:gravity="center_vertical"
            android:orientation="vertical">
        
        <Button android:id="@+id/option_video"
            android:textStyle="bold" android:textSize="16dip" android:padding="10dip" android:layout_height="fill_parent" android:layout_width="fill_parent"
            android:onClick="onClickVideoOption"
            android:text="Play Video"/>
            
        <Button  android:id="@+id/option_quiz"
            android:textStyle="bold" android:textSize="16dip" android:padding="10dip" android:layout_height="fill_parent" android:layout_width="fill_parent"
            android:onClick="onClickQuizOption"
            android:text="Take Quiz"
            />
        
        <Button  android:id="@+id/option_game"
            android:textStyle="bold" android:textSize="16dip" android:padding="10dip" android:layout_height="fill_parent" android:layout_width="fill_parent"
            android:onClick="onClickOption"
            android:text="Play Game"
            />
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>
